# SantiCCore

./: CMakeLists.txt  README.md  SantiDefine.h  SantiError.c  SantiError.h  SantiMath.c  SantiMath.h  SantiMath_.c  SantiMath_.h
Algorithm/: SantiCV.c  SantiCV.h  SantiController.c  SantiController.h
Struct/: SantiArray.c  SantiArray.h  SantiArray_.c  SantiArray_.h  SantiImage.c  SantiImage.h  SantiMatrix.c  SantiMatrix.h  SantiPoint.c  SantiPoint.h  SantiPoint_.c  SantiPoint_.h  SantiRange.c  SantiRange.h  SantiRange_.c  SantiRange_.h
